# zed-dbt-lineage

./: .gitignore  Cargo.toml  extension.toml
.cargo/: config.toml
.github/workflows/: release.yml
crates/dbt-lsp/: Cargo.toml
crates/dbt-lsp/src/: hover.rs  lineage.rs  main.rs  manifest.rs
crates/zed-dbt/: Cargo.toml
crates/zed-dbt/src/: lib.rs
languages/sql/: config.toml
src/: lib.rs
