[package]
name = "dbt-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dbt-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
